// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен рендерить только свитчер новых, если по свитчеру б/у нет данных 1`] = `
<div
  className="OrdersInfoHeader__controls__inner"
>
  <div
    className="OrdersInfoHeader__controls__item"
  >
    <div
      className="OrdersInfoHeader__controls__item__title"
    >
      Легковые новые
    </div>
    <Toggle
      checked={true}
      disabled={false}
      onCheck={[Function]}
    />
    <div
      className="OrdersInfoHeader__controls__item__price"
    >
      Подключить за 
      500 ₽
       / заявка
    </div>
  </div>
</div>
`;

exports[`не должен рендерить свитчер б/у, если по свитчеру новых нет данных 1`] = `
<div
  className="OrdersInfoHeader__controls__inner"
>
  <div
    className="OrdersInfoHeader__controls__item"
  >
    <div
      className="OrdersInfoHeader__controls__item__title"
    >
      Легковые с пробегом
    </div>
    <Toggle
      checked={true}
      disabled={false}
      onCheck={[Function]}
    />
    <div
      className="OrdersInfoHeader__controls__item__price"
    >
      Подключить за 
      500 ₽
       / заявка
    </div>
  </div>
</div>
`;
